[package]
name = "poseidon-bn128"
version = "0.1.1"
edition = "2021"
authors = ["Chance Hudson <PSE>"]
description = "Poseidon over alt_bn128 compatible with circomlib"
homepage = "https://github.com/chancehudson/poseidon-bn128"
repository = "https://github.com/chancehudson/poseidon-bn128.git"
license = "MIT OR Apache-2.0"

[lib]

[dependencies]
anyhow = "1.0.87"
num-bigint = "0.4.6"
num-traits = "0.2.19"
scalarff = { version = "0.4.0", features = ["alt_bn128"] }
#scalarff = { path = "../scalarff", features = ["alt_bn128"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
